// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainAccordionComponent /> matches snapshot when data values are passed on 1`] = `
<div>
  <div
    class="MuiPaper-root MuiTableContainer-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <table
      aria-label="simple table"
      class="MuiTable-root makeStyles-table-2"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            User Id
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            title
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            completed
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            delectus aut autem
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            false
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<MainAccordionComponent /> matches snapshot when empty 1`] = `
<div>
  <div
    class="MuiPaper-root MuiTableContainer-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <table
      aria-label="simple table"
      class="MuiTable-root makeStyles-table-1"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            User Id
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            title
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            completed
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      />
    </table>
  </div>
</div>
`;
